--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^5.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
