--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/react-daterange-picker": "^4.0.0",
     "crypto-js": "^4.1.1",
     "framer-motion": "^7.2.1",
     "mdb-react-ui-kit": "^4.2.0",
