--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "framer-motion": "^7.2.1",
     "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^5.0.0",
+    "places-autocomplete-react": "^1.0.10",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
