--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
