--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +22,10 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
