--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,7 @@
-# syntax=docker/dockerfile:1
-# pull official base image
-FROM node:13.12.0-alpine
-
-# set working directory
+FROM node:alpine
 WORKDIR /app
-
-
-# install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm install
-RUN npm install react-scripts@3.4.1 -g
-
-# add app
-COPY . ./
-
-# start app
-CMD ["npm", "start"]
+COPY ./ ./
+RUN npm i --legacy-peer-deps
+ENTRYPOINT ["npm", "run", "start"]
