add be test 12-15

--- a/backend/test/Makefile
+++ b/backend/test/Makefile
@@ -1,9 +1,10 @@
 test:
-	docker-compose up -d --build
-	timeout 3
-	docker inspect --format '{{.State.Running}}' test_testingSessionRedis_1
-	docker inspect --format '{{.State.Running}}' test_testingPostgres_1
-	go test -tags=integration
+	docker-compose down && \
+	docker-compose up -d --build && \
+	sleep 5 && \
+	docker inspect --format '{{.State.Running}}' test_testingSessionRedis_1 && \
+	docker inspect --format '{{.State.Running}}' test_testingPostgres_1 && \
+	go test -tags=integration && \
 	docker-compose down
 
 docker.start:
